# TaxonView

./: .gitignore  README.md  plan.md  pyproject.toml
src/taxonview/: __init__.py  aggregate.py  cli.py  render.py  taxonomy.py
src/taxonview/templates/: taxonview.html.j2
tests/: test_aggregate.py  test_render.py
